@@ -43,7 +43,7 @@ plugins {
     id 'com.diffplug.spotless' version '5.11.0'
     id 'checkstyle'
     id 'org.ajoberstar.grgit' version '5.0.0'
-    id 'org.gradle.test-retry' version '1.3.1'
+    id 'org.gradle.test-retry' version '1.5.2'
 
 }
 
@@ -478,6 +478,8 @@ tasks.withType(Test) {
     jvmArgs('--add-opens=java.base/java.util.concurrent=ALL-UNNAMED')
     jvmArgs('--add-opens=java.base/java.io=ALL-UNNAMED')
     jvmArgs('--add-opens=java.base/java.nio.file=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.util=ALL-UNNAMED')
 }
 
 
